--- a/EsercitazioneIUM/app/src/main/res/layout/activity_home.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
+        app:itemIconTint="#EEE4FD"
+        app:itemTextColor = "@color/text"
+        android:background="#2A2931"
+        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
         app:menu="@menu/bottom_navigation_menu" />
 
 </RelativeLayout>
