--- a/EsercitazioneIUM/app/src/main/res/layout/activity_messaggio_fine_registrazione.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_messaggio_fine_registrazione.xml
@@ -41,6 +41,7 @@
             android:gravity="center"
             android:layout_gravity="center"
             android:backgroundTint="@color/primary"
+            android:textColor="@color/text"
             android:textSize="26sp">
         </Button>
 
