--- a/EsercitazioneIUM/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/EsercitazioneIUM/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/home"
-        android:title="Home"
-        android:icon="@drawable/baseline_home_24"/>
+        android:title="Profilo"
+        android:icon="@drawable/baseline_account_circle_24"
+
+        />
     <item android:id="@+id/libretto"
         android:title="Libretto"
         android:icon="@drawable/baseline_add_to_photos_24"/>
