--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
@@ -1,17 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment"
     android:background="@color/background">
 
-    <TextView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textViewMsg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/text"
+                android:textSize="30sp"
+                />
+
+        </RelativeLayout>
+    </ScrollView>
+<!--
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Aggiungi esame"
+        android:textSize="20sp"
+
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"/>
+        -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Libretto fragment"
-        android:textColor="@color/text"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/aggiungiEsame"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:text="Aggiungi esame"
+            android:textSize="20sp"
+            android:drawableEnd="@drawable/baseline_add_24"
         />
-</RelativeLayout>
+    </LinearLayout>
+</FrameLayout>
