--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
@@ -5,26 +5,31 @@
     android:layout_height="match_parent"
     android:background="@color/background">
 
-    <ScrollView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+
+        <TextView
+            android:id="@+id/textViewMsg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            />
 
-            <TextView
-                android:id="@+id/textViewMsg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/text"
-                android:textSize="30sp"
-                />
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/librettoLista"
+            android:layout_below="@+id/textViewMsg"
+            />
 
-        </RelativeLayout>
-    </ScrollView>
+    </RelativeLayout>
+
+
 <!--
     <Button
         android:layout_width="200dp"
