--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_statistiche.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_statistiche.xml
@@ -7,12 +7,54 @@
     android:background="@color/background">
 
     <TextView
+        android:id="@+id/textViewMsgS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Statistiche fragment"
-        android:textColor="@color/text"
-        android:textSize="30sp"
         android:layout_centerInParent="true"
-        />
+        android:text=""
+        android:textColor="@color/text"
+        android:textSize="30sp" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewMedia"
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:layout_above="@+id/textViewMediaPonderata"
+
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewMediaPonderata"
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+
+
+
+            />
+        <TextView
+            android:layout_below="@id/textViewMediaPonderata"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewVotoLaurea"
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            android:textAlignment="center"
+
+            />
+
+
+
+
+
 
 </RelativeLayout>
