--- a/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
@@ -1,85 +1,137 @@
 <!-- list_item.xml -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="12dp"
     android:background="@color/background"
+    app:cardBackgroundColor="@color/accent"
+    android:padding="16dp"
+    app:cardCornerRadius="20dp"
+
     >
+<!--era 130dp l'hight-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textViewNomeEsame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="Analisi 1"
-        android:textColor="@color/text"
-        android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/textViewNomeEsame"
+            android:layout_width="225dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:text="Calcolo e metodo "
+            android:textColor="@color/text"
+            android:textSize="20sp"
+            android:textStyle="bold"
 
-    <TextView
-        android:id="@+id/textViewVoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewNomeEsame"
-        android:text="30"
-        android:textColor="@color/text"
-        android:textSize="30sp"/>
-    <TextView
-        android:id="@+id/textViewCfu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewVoto"
-        android:textColor="@color/text"
-        android:text="9 CFU"
-        android:textSize="16sp"/>
-    <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/textViewVoto"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-49dp"
-        android:layout_marginEnd="80dp"
-        android:id="@+id/buttonModifica"
-        android:backgroundTint="@color/primary"
-        android:foreground="@drawable/baseline_edit_24"
-        />
-    <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/textViewVoto"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="-49dp"
-        android:layout_marginEnd="5dp"
-        android:id="@+id/buttonElimina"
-        android:backgroundTint="@color/errore"
-        android:foreground="@drawable/baseline_delete_24"/>
-<!--
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/textViewVoto"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-49dp"
-        android:layout_marginEnd="80dp"
-        android:backgroundTint="@color/primary"
-        android:foreground="@drawable/baseline_edit_24" />
 
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/textViewVoto"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="-49dp"
-        android:layout_marginEnd="5dp"
-        android:backgroundTint="@color/errore"
-        android:foreground="@drawable/baseline_delete_24" />
--->
+            />
 
-    <Space
+        <TextView
+            android:id="@+id/textViewVoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ciao"
+            android:textColor="@color/text"
+            android:textSize="30sp"
+            android:layout_marginLeft="15dp"
+            android:layout_below="@+id/textViewNomeEsame"
+            />
+
+        <TextView
+            android:id="@+id/textViewCfu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewVoto"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="5dp"
+            android:text="ciao"
+            android:textColor="@color/text"
+            android:textSize="16sp" />
+
+        <ImageButton
+            android:id="@+id/buttonModifica"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="#4CAF50"
+            android:foreground="@drawable/baseline_edit_24"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="90dp"
+
+            />
+
+        <ImageButton
+            android:id="@+id/buttonElimina"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="@color/errore"
+            android:foreground="@drawable/baseline_delete_24"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="20dp"
+
+
+            />
+
+        <!--        <ImageButton
+                    android:id="@+id/buttonModifica"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:layout_below="@id/textViewVoto"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="-54dp"
+                    android:layout_marginEnd="85dp"
+                    android:backgroundTint="@color/primary"
+                    android:foreground="@drawable/baseline_edit_24" />
+
+                <ImageButton
+                    android:id="@+id/buttonElimina"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:layout_below="@id/textViewVoto"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="-54dp"
+                    android:layout_marginEnd="18dp"
+                    android:backgroundTint="@color/errore"
+                    android:foreground="@drawable/baseline_delete_24" />-->
+    </RelativeLayout>
+
+    <!--
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_below="@id/textViewVoto"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="-49dp"
+            android:layout_marginEnd="80dp"
+            android:backgroundTint="@color/primary"
+            android:foreground="@drawable/baseline_edit_24" />
+
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_below="@id/textViewVoto"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="-49dp"
+            android:layout_marginEnd="5dp"
+            android:backgroundTint="@color/errore"
+            android:foreground="@drawable/baseline_delete_24" />
+    -->
+
+    <!--    <Space
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:layout_below="@id/textViewCfu"
-        />
-</RelativeLayout>
+        />-->
+</androidx.cardview.widget.CardView>
