--- a/EsercitazioneIUM/app/src/main/res/layout/activity_registrazione.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_registrazione.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login"
+            android:text="Registrazione"
             android:textSize="36sp"
             android:textColor="@color/text"
             android:textAlignment="center"
