--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_home.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_home.xml
@@ -11,13 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@drawable/homebackground"
+        android:backgroundTint="@color/primary"
         />
 
     <ImageView
         android:layout_width="165dp"
         android:layout_height="165dp"
         android:background="@drawable/baseline_circle_24"
-        android:backgroundTint="@color/accent"
+        android:backgroundTint="@color/primary"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="193dp"
         />
