--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
@@ -50,8 +50,10 @@
             android:text="Aggiungi esame"
             android:textSize="20sp"
             android:drawableEnd="@drawable/baseline_add_24"
+            android:drawableTint="@color/text"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
+            android:backgroundTint="@color/secondary"
 
             />
     </RelativeLayout>
