--- a/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
@@ -10,7 +10,7 @@
     android:layout_marginStart="12dp"
     android:layout_marginEnd="12dp"
     android:background="@color/background"
-    app:cardBackgroundColor="@color/accent"
+    app:cardBackgroundColor="@color/primary"
     android:padding="16dp"
     app:cardCornerRadius="20dp"
 
