--- a/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/fragment_libretto.xml
@@ -41,19 +41,19 @@
             android:layout_below="@+id/textViewLibretto"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
-
             />
         <Button
             android:id="@+id/aggiungiEsame"
             android:layout_width="230dp"
             android:layout_height="50dp"
             android:text="Aggiungi esame"
+            android:textColor="@color/text"
             android:textSize="20sp"
             android:drawableEnd="@drawable/baseline_add_24"
             android:drawableTint="@color/text"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:backgroundTint="@color/secondary"
+            android:backgroundTint="@color/primary"
 
             />
     </RelativeLayout>
