--- a/EsercitazioneIUM/app/src/main/res/values/themes.xml
+++ b/EsercitazioneIUM/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
     </style>
     <style name="Theme.EsercitazioneEsame" parent="Base.Theme.EsercitazioneEsame" />
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
-        <item name="android:color">#4D38E3FD</item>
+        <item name="android:color">#38E3FD</item>
     </style>
 
 </resources>
