--- a/EsercitazioneIUM/app/src/main/res/layout/activity_aggiungi_esame.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_aggiungi_esame.xml
@@ -133,6 +133,22 @@
             android:layout_gravity="center"
             android:textSize="26sp">
         </Button>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="16dp">
+        </Space>
+        <Button
+            android:id="@+id/buttonTornaIndietro"
+            android:layout_width="325dp"
+            android:layout_height="wrap_content"
+            android:text="Indietro"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/secondary"
+            android:textColor="@color/text"
+            android:textSize="26sp">
+        </Button>
 
 
 
