--- a/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/list_item.xml
@@ -7,14 +7,19 @@
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
 
-    android:layout_marginStart="12dp"
-    android:layout_marginEnd="12dp"
+    android:layout_marginStart="0dp"
+    android:layout_marginEnd="0dp"
     android:background="@color/background"
     app:cardBackgroundColor="@color/secondary"
+
+
+
     android:padding="16dp"
     app:cardCornerRadius="20dp"
 
-    >
+
+    ><!--app:cardUseCompatPadding="true"
+    app:cardElevation="10dp"-->
 <!--era 130dp l'hight-->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,26 +27,24 @@
 
         <TextView
             android:id="@+id/textViewNomeEsame"
-            android:layout_width="225dp"
+            android:layout_width="245dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:text="Calcolo e metodo "
+            android:text="Analisi 1"
             android:textColor="@color/text"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold"
-
-
             />
 
         <TextView
             android:id="@+id/textViewVoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ciao"
+            android:text="30"
             android:textColor="@color/text"
-            android:textSize="30sp"
+            android:textSize="40sp"
             android:layout_marginLeft="15dp"
             android:layout_below="@+id/textViewNomeEsame"
             />
@@ -53,9 +56,9 @@
             android:layout_below="@+id/textViewVoto"
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="5dp"
-            android:text="ciao"
+            android:text="9 CFU"
             android:textColor="@color/text"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <ImageButton
             android:id="@+id/buttonModifica"
