--- a/EsercitazioneIUM/app/src/main/res/values-night/themes.xml
+++ b/EsercitazioneIUM/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.EsercitazioneEsame" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/background</item>
     </style>
+    <style name="Theme.EsercitazioneEsame" parent="Base.Theme.EsercitazioneEsame" />
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">#9A38E3FD</item>
+    </style>
+
 </resources>
