--- a/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,131 +8,132 @@
     android:orientation="vertical"
     android:background="@color/background"
     >
-    <LinearLayout
+
+
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="56dp">
-        </Space>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textSize="36sp"
-            android:textColor="@color/text"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="86dp">
-        </Space>
-
-        <EditText
-            android:textColor="@color/text"
-            android:id="@+id/editTextMatricola"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:hint="Matricola"
-            android:textColorHint="@color/hint"
-            android:textAlignment="gravity"
-            android:layout_marginEnd="60dp"
-            android:layout_marginStart="60dp"
-            android:drawableStart="@drawable/baseline_person_24"
-            android:drawableTint="@color/text"
-            android:drawablePadding="15dp"
-            android:paddingStart="10dp"
-            />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
-
-        <!--
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/data_di_nascita"
-            android:textSize="26sp"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        -->
-        <EditText
-            android:textColor="@color/text"
-            android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:textColorHint="@color/hint"
-            android:textAlignment="gravity"
-            android:layout_marginEnd="60dp"
-            android:layout_marginStart="60dp"
-            android:drawableStart="@drawable/baseline_person_24"
-            android:drawableTint="@color/text"
-            android:drawablePadding="15dp"
-            android:paddingStart="10dp"
-            />
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="96dp">
-        </Space>
-        <Button
-            android:id="@+id/buttonLogin"
-            android:layout_width="325dp"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:backgroundTint="@color/primary"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="@color/text"
-            android:layout_gravity="center"
-            android:textSize="26sp">
-
-        </Button>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp">
-        </Space>
-        <Button
-            android:id="@+id/buttonRegistrazione"
-            android:layout_width="325dp"
-            android:layout_height="wrap_content"
-            android:text="@string/non_hai_un_account"
-            android:textAlignment="center"
-            android:textColor="@color/text"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/secondary"
-            android:textSize="26sp">
-        </Button>
-
-
-    </LinearLayout>
+        android:text="@string/login"
+        android:textAlignment="center"
+        android:textColor="@color/text"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_above="@id/editTextMatricola"
+        android:layout_marginBottom="70dp"
+        />
 
 
 
-</ScrollView>
+    <EditText
+        android:id="@+id/editTextMatricola"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:drawableStart="@drawable/baseline_person_24"
+        android:drawablePadding="15dp"
+        android:drawableTint="@color/text"
+        android:hint="Matricola"
+        android:paddingStart="10dp"
+        android:textAlignment="gravity"
+        android:textColor="@color/text"
+        android:textColorHint="@color/hint"
+        android:textSize="20sp"
+        android:layout_marginBottom="16dp"
+        android:layout_above="@+id/editTextPassword"
+        android:maxLength="20"
+        />
+
+    <EditText
+        android:id="@+id/editTextPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:drawableStart="@drawable/baseline_lock_24"
+        android:drawablePadding="15dp"
+        android:drawableTint="@color/text"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:paddingStart="10dp"
+        android:textAlignment="gravity"
+        android:textColor="@color/text"
+        android:textColorHint="@color/hint"
+        android:textSize="20sp"
+        />
+
+    <Button
+        android:id="@+id/buttonHidePassword"
+
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="70dp"
+        android:background="#00000000"
+        android:foreground="@drawable/hide"
+        android:foregroundTint="@color/hint"
+        android:padding="20dp"
+
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/registrati"
+        android:layout_below="@+id/editTextPassword"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:paddingStart="20dp"
+        android:textAlignment="center"
+        android:text="Non hai un account? Registrati qui"
+        android:textColor="@color/text"
+        android:textSize="16dp"
+        />
+
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/primary"
+        android:gravity="center"
+        android:text="@string/login"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/text"
+        android:textSize="26sp"
+        android:layout_below="@+id/editTextPassword"
+        >
+    </Button>
+
+
+<!--
+    <Button
+        android:id="@+id/buttonRegistrazione"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/secondary"
+        android:gravity="center"
+        android:text="@string/non_hai_un_account"
+        android:textAlignment="center"
+        android:textColor="@color/text"
+        android:textSize="26sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/buttonLogin" />
+
+-->
+
+
+
+
+</RelativeLayout>
