--- a/EsercitazioneIUM/app/src/main/res/layout/activity_registrazione.xml
+++ b/EsercitazioneIUM/app/src/main/res/layout/activity_registrazione.xml
@@ -118,6 +118,7 @@
             android:drawableStart="@drawable/lock"
             android:drawablePadding="15dp"
             android:drawableTint="@color/text"
+            android:inputType="textPassword"
             android:hint="Password"
             android:paddingStart="10dp"
             android:textAlignment="gravity"
@@ -128,6 +129,20 @@
             android:layout_marginTop="16dp"
             android:layout_below="@+id/editTextDataNascita"
             />
+
+        <Button
+            android:id="@+id/buttonHidePassword"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/editTextDataNascita"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="70dp"
+            android:background="#00000000"
+            android:foreground="@drawable/hide"
+            android:foregroundTint="@color/hint"
+            android:padding="20dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
